2012-03-01  Albert Chu <chu11@llnl.gov>

	Merge altport branch. 

	* libfreeipmi/api/ipmi-api.c (_setup_hostname),
	libipmiconsole/ipmiconsole_defs.h, libipmiconsole/ipmiconsole.c
	(ipmiconsole_ctx_create), libipmiconsole/ipmiconsole_ctx.h
	(ipmiconsole_ctx_config_setup), libipmiconsole/ipmiconsole_ctx.c
	(ipmiconsole_ctx_config_setup), ipmidetectd/ipmidetectd_loop.c
	(_nodes_setup): Support ability to specify alternate port in
	hostname argument or host config.

	* libipmimonitoring/ipmi_monitoring_ipmi_communication.c
	(_ipmi_1_5_init, _ipmi_2_0_init, _outofband_init): Let various
	error checking fall through to lower level APIs.
	
	* man/manpage-common-outofband-hostname.man,
	man/manpage-common-outofband-hostname-hostranged.man,
	man/ipmidetectd.conf.5.pre.in: Update manpages appropriately.

2012-03-01  Albert Chu <chu11@llnl.gov>
	
	* libipmimonitoring/ipmi_monitoring_ipmi_communication.c
	(_ipmi_1_5_init, _ipmi_2_0_init): Properly return connection
	timeout error on connection timeout.

	* man/ipmidetectd.conf.5.pre.in: Fix some English.
	
2012-03-01  Albert Chu <chu11@llnl.gov>

	* libipmimonitoring/, libipmiconsole/: Support Cipher Suite 15,
	16, and 17.

2012-02-26  Yaroslav Halchenko <debian@onerussian.com>

	* man/ipmi-chassis.8.pre.in: Fix typos.
	
2012-02-24  Albert Chu <chu11@llnl.gov>

	Merge selreservation branch

	* libfreeipmi/: Support new functions
	ipmi_sel_parse_ctx_register_reservation_id() and
	ipmi_sel_parse_ctx_clear_reservation_id() in the sel-parse library
	as well as a new error return of
	IPMI_SEL_PARSE_ERR_RESERVATION_CANCELED.

	* ipmi-sel/: Support --post-clear option. 

2012-02-24  Albert Chu <chu11@llnl.gov>

	* common/miscutil/error.h, common/miscutil/error.c
	(err_init_exit_value): New function.

	* ipmidetect/ipmidetect.c (main): Exit with value 2 on errors.

	* ipmipower/: Properly exit with 1 when an error occurs on IPMI
	errors instead of just system errors.

	* man/: Add exit value diagnostics information to most manpages.
